updated the API information and CSS

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 
   <div class="card">
-    <h6>Advice # 117</h6>
+    <h6>Advice #<span class="num" id="advice">117</span></h6>
     <h2>
-      "Advice"
+      <span class="advice" id="advicetext">It is easy to sit up and take notice, what's difficult is getting up and taking action.</span>
     </h2>
 
     <img src="images/pattern-divider-mobile.svg"  class="divider-one" alt="">
     <div class="dices">
-      <img src="images/icon-dice.svg"  class="dice" alt="">
+      <img src="images/icon-dice.svg" id="btn" class="dice" alt="">
     </div>
   </div>
 
