--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 </head>
 <body>
 
-  <div class="card">
+  <main>
     <h6>Advice #<span class="num" id="advice">117</span></h6>
     <h2>
-      <span class="advice" id="advicetext">It is easy to sit up and take notice, what's difficult is getting up and taking action.</span>
+      "<span class="advice" id="advicetext">It is easy to sit up and take notice, what's difficult is getting up and taking action.</span>""
     </h2>
 
     <img src="images/pattern-divider-mobile.svg"  class="divider-one" alt="">
     <div class="dices">
       <img src="images/icon-dice.svg" id="btn" class="dice" alt="">
     </div>
-  </div>
+  </main>
 
 
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="http://esagewebdev.com/" target="_blank">Elizabeth Cantu</a>.
-  </div>
+  </footer>
 
   <script src="script.js"> </script>
 </body>
