completed visual updated in style and corrected the quote signs with the advice

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <h6>Advice #<span class="num" id="advice">117</span></h6>
     <h2>
-      "<span class="advice" id="advicetext">It is easy to sit up and take notice, what's difficult is getting up and taking action.</span>""
+      <span class="advice" id="advicetext">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</span>
     </h2>
 
     <img src="images/pattern-divider-mobile.svg"  class="divider-one" alt="">
